FINAL COMMIT - USE FOR GRADING - Update README.md and update navigation bars on all pages to allow access to User Administration page (if user is logged in) - FINAL COMMIT - USE FOR GRADING

--- a/src/main/webapp/user-admin/user-admin.style.client.css
+++ b/src/main/webapp/user-admin/user-admin.style.client.css
@@ -1,23 +1,5 @@
-/* Text of Create Button */
+/* Instructions at Top of Page */
 
-.wbdv-text-create {
-    font-family: 'Arial', 'Open Sans', sans-serif
-}
-
-/* Text of Update Button */
-
-.wbdv-text-update {
-    font-family: 'Arial', 'Open Sans', sans-serif
-}
-
-/* Text of Remove Button */
-
-.wbdv-text-remove {
-    font-family: 'Arial', 'Open Sans', sans-serif
-}
-
-/* Text of Edit Button */
-
-.wbdv-text-edit {
-    font-family: 'Arial', 'Open Sans', sans-serif
+.instruction {
+    padding: 10px
 }
